plugins/devkit/devkit-java-tests/testData/inspections/postfixTemplates/MyTemplateWithoutBeforeAfter.java
import com.intellij.codeInsight.template.postfix.templates.PostfixTemplate;

public class <error descr="Postfix template must have 'before.*.template' and 'after.*.template' beside 'description.html'">MyTemplateWithoutBeforeAfter</error> extends PostfixTemplate{


  }
